--- a/backend_neurasky/train_model.ipynb
+++ b/backend_neurasky/train_model.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "e2c414e0-9671-4105-84c9-7d4738b7e4a2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-03T05:13:15.258624Z",
+     "iopub.status.busy": "2025-12-03T05:13:15.258173Z",
+     "iopub.status.idle": "2025-12-03T05:13:19.391717Z",
+     "shell.execute_reply": "2025-12-03T05:13:19.388005Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -19,8 +26,9 @@
     "import lightgbm as lgb\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "import joblib\n",
+    "import os\n",
     "\n",
     "print(\"Libraries imported successfully.\")"
    ]
@@ -29,94 +37,91 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "786a8129-fdcb-4c1b-9af8-ef68cf9c7a96",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-03T05:13:19.399355Z",
+     "iopub.status.busy": "2025-12-03T05:13:19.398236Z",
+     "iopub.status.idle": "2025-12-03T05:13:19.676806Z",
+     "shell.execute_reply": "2025-12-03T05:13:19.672407Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading dataset/Combined_Flights_2018.parquet...\n",
-      "Loading dataset/Combined_Flights_2019.parquet...\n",
-      "Loading dataset/Combined_Flights_2020.parquet...\n",
-      "Loading dataset/Combined_Flights_2021.parquet...\n",
-      "Loading dataset/Combined_Flights_2022.parquet...\n",
-      "Combining all datasets...\n",
-      "Data loaded. Total shape: (29193782, 61)\n",
-      "  FlightDate            Airline Origin Dest  Cancelled  Diverted  CRSDepTime  \\\n",
-      "0 2018-01-23  Endeavor Air Inc.    ABY  ATL      False     False        1202   \n",
-      "1 2018-01-24  Endeavor Air Inc.    ABY  ATL      False     False        1202   \n",
-      "2 2018-01-25  Endeavor Air Inc.    ABY  ATL      False     False        1202   \n",
-      "3 2018-01-26  Endeavor Air Inc.    ABY  ATL      False     False        1202   \n",
-      "4 2018-01-27  Endeavor Air Inc.    ABY  ATL      False     False        1400   \n",
+      "Loading dataset/Combined_Flights_2024.csv...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded. Total shape: (15000, 61)\n",
+      "   FlightDate            Airline Origin Dest  Cancelled  Diverted  CRSDepTime  \\\n",
+      "0  2024-01-12     Japan Airlines    HKG  KUL          0         0        1557   \n",
+      "1  2024-08-15     Cathay Pacific    TGG  KUL          0         0         514   \n",
+      "2  2024-04-29     Cathay Pacific    BKK  KUL          0         0         930   \n",
+      "3  2024-10-18  Malaysia Airlines    JHB  PEN          0         0         723   \n",
+      "4  2024-05-13              Scoot    MEL  PEN          0         0        1139   \n",
       "\n",
       "   DepTime  DepDelayMinutes  DepDelay  ...  WheelsOff  WheelsOn  TaxiIn  \\\n",
-      "0   1157.0              0.0      -5.0  ...     1211.0    1249.0     7.0   \n",
-      "1   1157.0              0.0      -5.0  ...     1210.0    1246.0    12.0   \n",
-      "2   1153.0              0.0      -9.0  ...     1211.0    1251.0    11.0   \n",
-      "3   1150.0              0.0     -12.0  ...     1207.0    1242.0    11.0   \n",
-      "4   1355.0              0.0      -5.0  ...     1412.0    1448.0    11.0   \n",
+      "0     1557                0         0  ...          0         0      10   \n",
+      "1      514                0         0  ...          0         0      10   \n",
+      "2      949               19        19  ...          0         0      10   \n",
+      "3      723                0         0  ...          0         0      10   \n",
+      "4     1139                0         0  ...          0         0      10   \n",
       "\n",
       "   CRSArrTime  ArrDelay  ArrDel15  ArrivalDelayGroups  ArrTimeBlk  \\\n",
-      "0        1304      -8.0       0.0                -1.0   1300-1359   \n",
-      "1        1304      -6.0       0.0                -1.0   1300-1359   \n",
-      "2        1304      -2.0       0.0                -1.0   1300-1359   \n",
-      "3        1304     -11.0       0.0                -1.0   1300-1359   \n",
-      "4        1500      -1.0       0.0                -1.0   1500-1559   \n",
+      "0          23         8         0                   0         NaN   \n",
+      "1         738        -1         0                   0         NaN   \n",
+      "2        1648         9         0                   0         NaN   \n",
+      "3         931        -3         0                   0         NaN   \n",
+      "4        1624        -5         0                   0         NaN   \n",
       "\n",
       "   DistanceGroup  DivAirportLandings  \n",
-      "0              1                 0.0  \n",
-      "1              1                 0.0  \n",
-      "2              1                 0.0  \n",
-      "3              1                 0.0  \n",
-      "4              1                 0.0  \n",
+      "0              0                   0  \n",
+      "1              0                   0  \n",
+      "2              0                   0  \n",
+      "3              0                   0  \n",
+      "4              0                   0  \n",
       "\n",
       "[5 rows x 61 columns]\n"
      ]
     }
    ],
    "source": [
-    "# List all the parquet files you want to load\n",
-    "data_files = [\n",
-    "    'dataset/Combined_Flights_2018.parquet',\n",
-    "    'dataset/Combined_Flights_2019.parquet',\n",
-    "    'dataset/Combined_Flights_2020.parquet',\n",
-    "    'dataset/Combined_Flights_2021.parquet',\n",
-    "    'dataset/Combined_Flights_2022.parquet'\n",
-    "]\n",
+    "# Load the new dataset\n",
+    "data_file = 'dataset/Combined_Flights_2024.csv'\n",
+    "print(f\"Loading {data_file}...\")\n",
     "\n",
-    "# --- IMPORTANT WARNING ---\n",
-    "# This is a LOT of data. This step might take a few minutes\n",
-    "# and use a lot of your computer's RAM.\n",
-    "# If your computer crashes, try it with just ONE file first:\n",
-    "# data_files = ['dataset/Combined_Flights_2022.parquet']\n",
-    "\n",
-    "# Loop through each file, load it, and add it to a list\n",
-    "dataframes_list = []\n",
-    "for file in data_files:\n",
-    "    print(f\"Loading {file}...\")\n",
-    "    df = pd.read_parquet(file)\n",
-    "    dataframes_list.append(df)\n",
-    "\n",
-    "# Combine all DataFrames into one single, massive DataFrame\n",
-    "print(\"Combining all datasets...\")\n",
-    "df = pd.concat(dataframes_list, ignore_index=True)\n",
-    "\n",
-    "print(f\"Data loaded. Total shape: {df.shape}\")\n",
-    "print(df.head())"
+    "try:\n",
+    "    df = pd.read_csv(data_file)\n",
+    "    print(f\"Data loaded. Total shape: {df.shape}\")\n",
+    "    print(df.head())\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Error: {data_file} not found. Please generate the dataset first.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "030ef65c-5be8-4822-ad2d-db7d10bc3c10",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-03T05:13:19.684307Z",
+     "iopub.status.busy": "2025-12-03T05:13:19.683346Z",
+     "iopub.status.idle": "2025-12-03T05:13:19.777191Z",
+     "shell.execute_reply": "2025-12-03T05:13:19.772603Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original size: 29193782 rows\n",
-      "Size after dropping missing values: 28430698 rows\n",
+      "Original size: 15000 rows\n",
+      "Size after dropping missing values: 15000 rows\n",
       "Data prepared and encoded.\n"
      ]
     },
@@ -154,52 +159,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1202</td>\n",
-       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1557</td>\n",
        "      <td>4</td>\n",
-       "      <td>23</td>\n",
-       "      <td>145.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1202</td>\n",
-       "      <td>0</td>\n",
+       "      <td>8</td>\n",
        "      <td>4</td>\n",
-       "      <td>23</td>\n",
-       "      <td>145.0</td>\n",
+       "      <td>514</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>4</td>\n",
        "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1202</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>23</td>\n",
-       "      <td>145.0</td>\n",
+       "      <td>930</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>10</td>\n",
        "      <td>5</td>\n",
-       "      <td>1202</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>23</td>\n",
-       "      <td>145.0</td>\n",
+       "      <td>723</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>23</td>\n",
-       "      <td>145.0</td>\n",
+       "      <td>1139</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2280</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -207,11 +212,11 @@
       ],
       "text/plain": [
        "   Month  DayOfWeek  CRSDepTime  Operating_Airline  Origin  Dest  Distance\n",
-       "0      1          2        1202                  0       4    23     145.0\n",
-       "1      1          3        1202                  0       4    23     145.0\n",
-       "2      1          4        1202                  0       4    23     145.0\n",
-       "3      1          5        1202                  0       4    23     145.0\n",
-       "4      1          6        1400                  0       4    23     145.0"
+       "0      1          5        1557                  4       5    10      4048\n",
+       "1      8          4         514                  1      20    10      1152\n",
+       "2      4          1         930                  1       2    10      3504\n",
+       "3     10          5         723                  5       7    16      1024\n",
+       "4      5          1        1139                  9      13    16      2280"
       ]
      },
      "metadata": {},
@@ -219,52 +224,41 @@
     }
    ],
    "source": [
-    "# --- New Cell 3 (with fixes) ---\n",
+    "from IPython.display import display\n",
     "\n",
-    "from IPython.display import display # Add this to make nice tables\n",
-    "\n",
-    "# 1. Define your target (what we want to predict)\n",
+    "# 1. Define target and features\n",
     "target = 'DepDel15'\n",
-    "\n",
-    "# 2. Define your features (the inputs for the model)\n",
     "features = [\n",
     "    'Month',\n",
     "    'DayOfWeek',\n",
     "    'CRSDepTime',        # Scheduled Departure Time\n",
-    "    'Operating_Airline', # Your data dictionary calls this \"Unique Carrier Code\"\n",
+    "    'Operating_Airline', # Unique Carrier Code\n",
     "    'Origin',            # Origin Airport Code\n",
     "    'Dest',              # Destination Airport Code\n",
-    "    'Distance'           # Let's add distance as a feature\n",
+    "    'Distance'           # Distance\n",
     "]\n",
     "\n",
-    "# 3. Define which of those features are categorical\n",
     "categorical_features = ['Operating_Airline', 'Origin', 'Dest']\n",
     "\n",
-    "# 4. Clean the data\n",
+    "# 2. Clean the data\n",
     "print(f\"Original size: {df.shape[0]} rows\")\n",
-    "# Drop any rows where our key features or target are missing\n",
     "df = df.dropna(subset=features + [target])\n",
     "print(f\"Size after dropping missing values: {df.shape[0]} rows\")\n",
     "\n",
-    "# 5. Create our X (features) and y (target)\n",
-    "# --- FIX 1: Add .copy() to make the warning go away ---\n",
-    "X = df[features].copy() \n",
+    "# 3. Prepare X and y\n",
+    "X = df[features].copy()\n",
     "y = df[target]\n",
-    "# ---------------------------------------------------\n",
     "\n",
-    "# 6. Create and fit the encoder\n",
+    "# 4. Encode categorical features\n",
     "encoder = OrdinalEncoder(\n",
     "    handle_unknown='use_encoded_value', \n",
     "    unknown_value=-1,\n",
     "    dtype=int\n",
     ")\n",
     "\n",
-    "# Now we modify our new copy, which is perfectly safe.\n",
     "X[categorical_features] = encoder.fit_transform(X[categorical_features])\n",
     "\n",
     "print(\"Data prepared and encoded.\")\n",
-    "\n",
-    "# --- FIX 2: Use display() for a clean HTML table output ---\n",
     "display(X.head())"
    ]
   },
@@ -272,23 +266,34 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "1861f15d-a752-49c0-b246-91881ccf21f5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-03T05:13:19.786520Z",
+     "iopub.status.busy": "2025-12-03T05:13:19.785401Z",
+     "iopub.status.idle": "2025-12-03T05:13:20.546309Z",
+     "shell.execute_reply": "2025-12-03T05:13:20.542105Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting model training... (this may take a few minutes)\n",
-      "[LightGBM] [Warning] Categorical features with more bins than the configured maximum bin number found.\n",
-      "[LightGBM] [Warning] For categorical features, max_bin and max_bin_by_feature may be ignored with a large number of categories.\n",
-      "[LightGBM] [Info] Number of positive: 3930370, number of negative: 18814188\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.322069 seconds.\n",
+      "Starting model training...\n",
+      "[LightGBM] [Info] Number of positive: 1405, number of negative: 10595\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000471 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 1085\n",
-      "[LightGBM] [Info] Number of data points in the train set: 22744558, number of used features: 7\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.172805 -> initscore=-1.565878\n",
-      "[LightGBM] [Info] Start training from score -1.565878\n",
+      "[LightGBM] [Info] Total Bins 588\n",
+      "[LightGBM] [Info] Number of data points in the train set: 12000, number of used features: 7\n",
+      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.117083 -> initscore=-2.020345\n",
+      "[LightGBM] [Info] Start training from score -2.020345\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Model training complete.\n"
      ]
     }
@@ -299,15 +304,15 @@
     "\n",
     "# Initialize the LightGBM Classifier\n",
     "model = lgb.LGBMClassifier(\n",
-    "    objective='binary',  # We are predicting 0 or 1 (binary)\n",
+    "    objective='binary',\n",
     "    n_estimators=100,\n",
-    "    n_jobs=-1            # Use all available CPU cores\n",
+    "    n_jobs=-1\n",
     ")\n",
     "\n",
-    "# Train the model!\n",
-    "print(\"Starting model training... (this may take a few minutes)\")\n",
+    "# Train the model\n",
+    "print(\"Starting model training...\")\n",
     "model.fit(X_train, y_train, \n",
-    "          categorical_feature=categorical_features  # Pass the correct feature names\n",
+    "          categorical_feature=categorical_features\n",
     "         )\n",
     "\n",
     "print(\"Model training complete.\")"
@@ -317,14 +322,27 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "7d8b83de-8585-4c81-a0d7-cb1e73f46173",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-03T05:13:20.555378Z",
+     "iopub.status.busy": "2025-12-03T05:13:20.554204Z",
+     "iopub.status.idle": "2025-12-03T05:13:20.630141Z",
+     "shell.execute_reply": "2025-12-03T05:13:20.626238Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Making predictions...\n",
-      "Model Accuracy: 82.82%\n"
+      "------------------------------\n",
+      "Model Performance Metrics:\n",
+      "Accuracy:  87.70%\n",
+      "Precision: 0.0000\n",
+      "Recall:    0.0000\n",
+      "F1-Score:  0.0000\n",
+      "------------------------------\n"
      ]
     }
    ],
@@ -333,16 +351,33 @@
     "print(\"Making predictions...\")\n",
     "y_pred = model.predict(X_test)\n",
     "\n",
-    "# Check the accuracy\n",
+    "# Calculate metrics\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
-    "print(f\"Model Accuracy: {accuracy * 100:.2f}%\")"
+    "precision = precision_score(y_test, y_pred, zero_division=0)\n",
+    "recall = recall_score(y_test, y_pred, zero_division=0)\n",
+    "f1 = f1_score(y_test, y_pred, zero_division=0)\n",
+    "\n",
+    "print(\"-\" * 30)\n",
+    "print(f\"Model Performance Metrics:\")\n",
+    "print(f\"Accuracy:  {accuracy * 100:.2f}%\")\n",
+    "print(f\"Precision: {precision:.4f}\")\n",
+    "print(f\"Recall:    {recall:.4f}\")\n",
+    "print(f\"F1-Score:  {f1:.4f}\")\n",
+    "print(\"-\" * 30)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "3ad99449-268d-4b73-86ca-6e4a1d1de3ba",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-03T05:13:20.638329Z",
+     "iopub.status.busy": "2025-12-03T05:13:20.637088Z",
+     "iopub.status.idle": "2025-12-03T05:13:20.672768Z",
+     "shell.execute_reply": "2025-12-03T05:13:20.669683Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -353,22 +388,13 @@
     }
    ],
    "source": [
-    "# Save the trained model to a file\n",
+    "# Save the trained model and encoder\n",
+    "os.makedirs('api', exist_ok=True)\n",
     "joblib.dump(model, 'api/flight_delay_model.joblib')\n",
-    "\n",
-    "# Save the encoder to a file\n",
     "joblib.dump(encoder, 'api/flight_data_encoder.joblib')\n",
     "\n",
     "print(\"Model and encoder saved to api/ folder.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49aaf576-e824-452d-83f5-61b74c6a94a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
